messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: messaging.local    # Optional: You can use your own domain or skip this line for Minikube
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: messaging-app-service   # The name of your Django service
            port:
              number: 8000
